@startuml

title __CUTablePanels Package Diagram__\n


    namespace CUTablePanels {
      class CUTablePanels.AMCInfoTablePanel {
          - columnName : String[]
          + AMCInfoTablePanel()
          + setupTable()
      }
    }

  

    namespace CUTablePanels {
      class CUTablePanels.DisTransTablePanel {
          - disColumnName : String[]
          - disData : Object[][]
          - disSp : JScrollPane
          - disTable : JTable
          - transColumnName : String[]
          - transData : Object[][]
          - transSp : JScrollPane
          - transTable : JTable
          + DisTransTablePanel()
          + addSp()
          + setupTable()
      }
    }

  

    namespace CUTablePanels {
      class CUTablePanels.IncomingTablePanel {
          - columnName : String[]
          - data : Object[][]
          - scrollPane : JScrollPane
          - table : JTable
          + IncomingTablePanel()
          + setupTable()
      }
    }

  

    namespace CUTablePanels {
      class CUTablePanels.LongStayTablePanel {
          - columnName : String[]
          - data : Object[][]
          - scrollPane : JScrollPane
          - table : JTable
          + LongStayTablePanel()
          + setupTable()
      }
    }

  

  CUTablePanels.AMCInfoTablePanel -up-|> javax.swing.JPanel
  CUTablePanels.AMCInfoTablePanel o-- Methods.ControlCentre
  CUTablePanels.DisTransTablePanel -up-|> javax.swing.JPanel
  CUTablePanels.DisTransTablePanel o-- AMCWardPanels.TableFrames.MyTableModel
  CUTablePanels.DisTransTablePanel o-- Methods.ControlCentre
  CUTablePanels.DisTransTablePanel o-- AMCWardPanels.TableFrames.MyTableModel
  CUTablePanels.IncomingTablePanel -up-|> javax.swing.JPanel
  CUTablePanels.IncomingTablePanel o-- Methods.ControlCentre
  CUTablePanels.IncomingTablePanel o-- AMCWardPanels.TableFrames.MyTableModel
  CUTablePanels.LongStayTablePanel -up-|> javax.swing.JPanel
  CUTablePanels.LongStayTablePanel o-- Methods.ControlCentre
  CUTablePanels.LongStayTablePanel o-- AMCWardPanels.TableFrames.MyTableModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
